--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,6 @@
       <artifactId>hibernate-core</artifactId>
       <version>6.5.2.Final</version>
     </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
-      <version>5.6.15.Final</version>
-    </dependency>
-
 
     <dependency>
       <groupId>jakarta.servlet</groupId>
@@ -116,6 +110,12 @@
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
       <version>6.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <version>6.3.3</version>
     </dependency>
 
   </dependencies>
